clusterip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: clusterip-service
  namespace: np-test-a
spec:
  type: ClusterIP
  selector:
    app: np-test-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
