nodeport-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-service
  namespace: np-test-a
spec:
  type: NodePort
  selector:
    app: np-test-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
      nodePort: 30080
